--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			$(function(){
 
 				$("#typed").typed({
-					strings: ["by", "Maapin gw semalam dah kasar banget", "Maapin gw yang curigaan ma lu :3", "Ane minta maap buat semuanya, yah mungkin lu jadi benci bet ma gw, yah gpp sih orang gw yang salah :)", "Sekali lagi gw minta maaf ya pipah :(", "Baikan lagi ya by, ILY cantikku :3"],
+					strings: ["Ohayou by", "Maapin gw semalam dah kasar banget", "Maapin gw yang curigaan ma lu :3", "Ane minta maap buat semuanya, yah mungkin lu jadi benci bet ma gw, yah gpp sih orang gw yang salah :)", "Sekali lagi gw minta maaf ya pipah :(", "Baikan lagi ya by, ILY cantikku :3"],
 					typeSpeed: 150,
 			  callback: function(){
 				shift();
